начал делать хедер

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -26,3 +26,7 @@ $footer-field-color: rgba(255, 255, 255, 0.3);
 $card-set-gap: 30px;
 $transition-type: cubic-bezier(0.4, 0, 0.2, 1);
 $transition-time: 250ms;
+
+$mobile-width: 480px;
+$tablet-width: 768px;
+$desktop-width: 1200px;
