--- a/sass/base/_defaults.scss
+++ b/sass/base/_defaults.scss
@@ -40,9 +40,21 @@ ul {
 }
 
 .container {
-  width: 1230px;
+  // width: 1230px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: $mobile-width) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    width: 1200px;
+  }
 }
