--- a/sass/components-new/_header.scss
+++ b/sass/components-new/_header.scss
@@ -1,9 +1,17 @@
 /* Шапка */
-// .header__main-nav {
-//   display: flex;
-//   align-items: center;
-//   /* border-bottom: 1px solid tomato; */
-// }
+.header__main-nav {
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.header__nav {
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+  }
+}
 
 .logo {
   color: $logo-black;
@@ -23,4 +31,64 @@
 
 .logo__first-half {
   color: $accent-color;
+}
+
+.site-nav {
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    margin-left: 87px;
+  }
+}
+
+.site-nav__item:not(:first-child) {
+  @media screen and (min-width: $tablet-width) {
+    margin-left: 50px;
+  }
+}
+
+.site-nav__link {
+  @media screen and (min-width: $tablet-width) {
+    position: relative;
+
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    color: $primary-text-color;
+
+    font-size: 14px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.28px;
+
+    @include transit(color);
+
+    &::after {
+      position: absolute;
+      bottom: 0;
+
+      content: "";
+      display: block;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+
+      background-color: $accent-color;
+
+      opacity: 0;
+    }
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+
+    &--current {
+      color: $accent-color;
+    }
+
+    &--current::after {
+      opacity: 1;
+    }
+  }
 }
