--- a/sass/components-new/_header.scss
+++ b/sass/components-new/_header.scss
@@ -17,15 +17,19 @@
   color: $logo-black;
   font-family: raleway;
 
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 700;
   line-height: normal;
-  letter-spacing: 0.78px;
+  letter-spacing: 0.03em;
   @include transit(color);
 
   &:hover,
   &:focus {
     color: $accent-color;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    font-size: 26px;
   }
 }
 
@@ -91,4 +95,50 @@
       opacity: 1;
     }
   }
+}
+
+.auth-nav {
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 96px;
+
+  margin-left: auto;
+}
+
+.auth-nav__item {
+  display: flex;
+  align-items: center;
+}
+
+.auth-nav__link {
+  display: flex;
+  align-items: center;
+  &:first-child {
+    margin-bottom: 10px;
+  }
+
+  // padding-top: 32px;
+  // padding-bottom: 32px;
+
+  color: $text-color;
+
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+
+  @include transit(color);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
+
+.auth-nav__icon {
+  margin-right: 10px;
+
+  fill: currentColor;
 }
