--- a/sass/components-new/_header.scss
+++ b/sass/components-new/_header.scss
@@ -38,14 +38,25 @@
 }
 
 .site-nav {
+  margin-top: 48px;
+
   @media screen and (min-width: $tablet-width) {
     display: flex;
+    margin-top: 0;
     margin-left: 87px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-left: 92px;
   }
 }
 
 .site-nav__item:not(:first-child) {
+  @media screen and (min-width: $mobile-width) {
+    margin-top: 32px;
+  }
   @media screen and (min-width: $tablet-width) {
+    margin-top: 0;
     margin-left: 50px;
   }
 }
@@ -63,7 +74,7 @@
     font-size: 14px;
     font-weight: 500;
     line-height: normal;
-    letter-spacing: 0.28px;
+    letter-spacing: 0.02em;
 
     @include transit(color);
 
@@ -98,33 +109,48 @@
 }
 
 .auth-nav {
-  display: flex;
-  flex-direction: column;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 96px;
+  margin-top: 306px;
 
-  margin-left: auto;
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+    margin-left: auto;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    flex-direction: row;
+  }
 }
 
 .auth-nav__item {
   display: flex;
   align-items: center;
+
+  &:not(:last-child) {
+    margin-bottom: 32px;
+
+    @media screen and (min-width: $tablet-width) {
+      margin-bottom: 10px;
+    }
+
+    @media screen and (min-width: $desktop-width) {
+      margin-bottom: 0px;
+      margin-right: 30px;
+    }
+  }
 }
 
 .auth-nav__link {
   display: flex;
   align-items: center;
-  &:first-child {
-    margin-bottom: 10px;
-  }
 
   // padding-top: 32px;
   // padding-bottom: 32px;
 
   color: $text-color;
 
-  font-size: 12px;
+  font-size: 34px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -134,6 +160,10 @@
   &:hover,
   &:focus {
     color: $accent-color;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 14px;
   }
 }
 
