--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./utils/placeholders";
 @import "./base/defaults";
 @import "./components-new/header";
+@import "./components-new/modal-nav";
 // @import "./components-old/header";
 // @import "./components-old/hero";
 // @import "./components-old/headlines";
