--- a/css/main.css
+++ b/css/main.css
@@ -72,17 +72,14 @@ ul {
 }
 
 /* Шапка */
-@media screen and (min-width: 768px) {
-  .header__main-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+.header__main-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-
 @media screen and (min-width: 768px) {
   .header__nav {
     display: -webkit-box;
@@ -95,6 +92,7 @@ ul {
 }
 
 .logo {
+  display: block;
   color: #000000;
   font-family: raleway;
   font-size: 24px;
@@ -115,6 +113,10 @@ ul {
 
 .logo__first-half {
   color: #2196f3;
+}
+
+.logo__margin {
+  margin: 16px 0;
 }
 
 .site-nav {
@@ -250,4 +252,19 @@ ul {
 .auth-nav__icon {
   margin-right: 10px;
   fill: currentColor;
+}
+
+.modal-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto;
+  display: none;
 }/*# sourceMappingURL=main.css.map */
