--- a/css/main.css
+++ b/css/main.css
@@ -180,11 +180,11 @@ ul {
   }
 }
 
-.auth-nav {
+.contact-nav {
   display: none;
 }
 @media screen and (min-width: 768px) {
-  .auth-nav {
+  .contact-nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -197,7 +197,7 @@ ul {
   }
 }
 @media screen and (min-width: 1200px) {
-  .auth-nav {
+  .contact-nav {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -205,7 +205,7 @@ ul {
   }
 }
 
-.auth-nav__item {
+.contact-nav__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -214,18 +214,18 @@ ul {
           align-items: center;
 }
 @media screen and (min-width: 768px) {
-  .auth-nav__item:not(:last-child) {
+  .contact-nav__item:not(:last-child) {
     margin-bottom: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .auth-nav__item:not(:last-child) {
+  .contact-nav__item:not(:last-child) {
     margin-bottom: 0px;
     margin-right: 30px;
   }
 }
 
-.auth-nav__link {
+.contact-nav__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -240,21 +240,22 @@ ul {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.auth-nav__link:hover, .auth-nav__link:focus {
+.contact-nav__link:hover, .contact-nav__link:focus {
   color: #2196f3;
 }
 @media screen and (min-width: 1200px) {
-  .auth-nav__link {
+  .contact-nav__link {
     font-size: 14px;
   }
 }
 
-.auth-nav__icon {
+.contact-nav__icon {
   margin-right: 10px;
   fill: currentColor;
 }
 
-.modal-nav {
+.container-modal {
+  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -262,9 +263,75 @@ ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin: auto;
-  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
+  z-index: 1;
+  cursor: pointer;
+  background-color: #ffffff;
+}
+
+.nav-modal {
+  margin-bottom: 206px;
+  font-weight: 500;
+  font-size: 40px;
+  letter-spacing: 0.02em;
+}
+
+.nav-modal__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.nav-modal__link {
+  color: #212121;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-modal__link--current {
+  color: #2196f3;
+}
+.nav-modal__link:hover, .nav-modal__link:focus {
+  color: #2196f3;
+}
+
+.contact-modal {
+  margin-bottom: 64px;
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.02em;
+}
+
+.contact-modal__item:not(:last-child) {
+  margin-bottom: 32px;
+  font-size: 34px;
+}
+
+.contact-modal__link {
+  color: #757575;
+}
+.contact-modal__link--change {
+  color: #2196f3;
+}
+
+.networks-modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 122%;
+  letter-spacing: 0.02em;
+}
+
+.networks-modal__item:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(21, 21, 21, 0.2);
+}
+
+.networks-modal__link {
+  color: #2196f3;
 }/*# sourceMappingURL=main.css.map */
