--- a/sass/components-new/_modal-nav.scss
+++ b/sass/components-new/_modal-nav.scss
@@ -1,7 +1,86 @@
-.modal-nav {
+.container-modal {
+  position: fixed;
+
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin: auto;
-  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
+  z-index: 1;
+  cursor: pointer;
+
+  // display: none;
+
+  background-color: $primary-background;
+}
+
+.nav-modal {
+  margin-bottom: 206px;
+
+  font-weight: 500;
+  font-size: 40px;
+  letter-spacing: 0.02em;
+}
+
+.nav-modal__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.nav-modal__link {
+  color: $primary-text-color;
+
+  @include transit(color);
+
+  &--current {
+    color: $accent-color;
+  }
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
+
+.contact-modal {
+  margin-bottom: 64px;
+
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.02em;
+}
+
+.contact-modal__item:not(:last-child) {
+  margin-bottom: 32px;
+
+  font-size: 34px;
+}
+
+.contact-modal__link {
+  color: $text-color;
+
+  &--change {
+    color: $accent-color;
+  }
+}
+
+.networks-modal {
+  display: flex;
+
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 122%;
+  letter-spacing: 0.02em;
+}
+
+.networks-modal__item:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid $input-border-color;
+}
+
+.networks-modal__link {
+  color: $accent-color;
 }
