--- a/sass/components-new/_header.scss
+++ b/sass/components-new/_header.scss
@@ -36,7 +36,7 @@
   }
 }
 
-.logo__first-half {
+.logo__color-change {
   color: $accent-color;
 }
 
@@ -58,13 +58,11 @@
   }
 }
 
-.site-nav__item:not(:first-child) {
-  // @media screen and (min-width: $mobile-width) {
-  //   margin-top: 32px;
-  // }
-  @media screen and (min-width: $tablet-width) {
-    margin-top: 0;
-    margin-left: 50px;
+.site-nav__item {
+  &:not(:first-child) {
+    @media screen and (min-width: $tablet-width) {
+      margin-left: 50px;
+    }
   }
 }
 
@@ -135,12 +133,11 @@
   align-items: center;
 
   &:not(:last-child) {
-    @media screen and (min-width: $tablet-width) {
+    @media screen and (max-width: 1199px) {
       margin-bottom: 10px;
     }
 
     @media screen and (min-width: $desktop-width) {
-      margin-bottom: 0px;
       margin-right: 30px;
     }
   }
