--- a/sass/components-new/_header.scss
+++ b/sass/components-new/_header.scss
@@ -8,9 +8,12 @@
 }
 
 .header__nav {
+  display: flex;
+  align-items: center;
+
   @media screen and (min-width: $tablet-width) {
-    display: flex;
-    align-items: center;
+    // display: flex;
+    // align-items: center;
   }
 }
 
@@ -173,4 +176,30 @@
   margin-right: 10px;
 
   fill: currentColor;
+}
+
+.menu-button {
+  display: flex;
+  padding: 0;
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+  z-index: 2;
+  cursor: pointer;
+
+  & .menu-button__close {
+    display: none;
+  }
+
+  &.is-open .menu-button__close {
+    display: block;
+  }
+
+  &.is-open .menu-button__menu {
+    display: none;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    display: none;
+  }
 }
