сделал хедер и menu-nav

--- a/sass/base/_defaults.scss
+++ b/sass/base/_defaults.scss
@@ -41,6 +41,9 @@ ul {
 
 .container {
   // width: 1230px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -49,6 +52,7 @@ ul {
   @media screen and (min-width: $mobile-width) {
     width: 480px;
   }
+
   @media screen and (min-width: $tablet-width) {
     width: 768px;
   }
