--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,15 @@ ul {
 }
 
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -124,7 +133,6 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 0;
     margin-left: 87px;
   }
 }
@@ -188,7 +196,6 @@ ul {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-top: 0;
     margin-left: auto;
   }
 }
@@ -281,7 +288,7 @@ ul {
   }
 }
 
-.container-modal {
+.menu-container {
   display: none;
   position: fixed;
   -webkit-box-orient: vertical;
@@ -294,59 +301,59 @@ ul {
   width: 100%;
   height: 100%;
   padding: 48px 40px;
-  z-index: 1;
   cursor: pointer;
+  z-index: 1;
   background-color: #ffffff;
 }
-.container-modal.is-open {
+.menu-container.is-open {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.nav-modal {
+.menu-nav {
   margin-bottom: 306px;
   font-weight: 500;
   font-size: 40px;
   letter-spacing: 0.02em;
 }
 
-.nav-modal__item:not(:last-child) {
+.menu-nav__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
-.nav-modal__link {
+.menu-nav__link {
   color: #212121;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-modal__link--current {
+.menu-nav__link--current {
   color: #2196f3;
 }
-.nav-modal__link:hover, .nav-modal__link:focus {
+.menu-nav__link:hover, .menu-nav__link:focus {
   color: #2196f3;
 }
 
-.contact-modal {
+.menu-contact {
   margin-bottom: 64px;
   font-weight: 500;
   font-size: 24px;
   letter-spacing: 0.02em;
 }
 
-.contact-modal__item:not(:last-child) {
+.menu-contact__item:not(:last-child) {
   margin-bottom: 32px;
   font-size: 34px;
 }
 
-.contact-modal__link {
+.menu-contact__link {
   color: #757575;
 }
-.contact-modal__link--change {
+.menu-contact__link--change {
   color: #2196f3;
 }
 
-.networks-modal {
+.menu-networks {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -356,12 +363,12 @@ ul {
   letter-spacing: 0.02em;
 }
 
-.networks-modal__item:not(:last-child) {
+.menu-networks__item:not(:last-child) {
   margin-right: 10px;
   padding-right: 10px;
   border-right: 1px solid rgba(21, 21, 21, 0.2);
 }
 
-.networks-modal__link {
+.menu-networks__link {
   color: #2196f3;
 }/*# sourceMappingURL=main.css.map */
