сделал секции - hero, advantages, work

--- a/sass/base/_defaults.scss
+++ b/sass/base/_defaults.scss
@@ -41,7 +41,7 @@ ul {
 
 .container {
   // width: 1230px;
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: center;
   padding-left: 15px;
