--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,10 @@
 @import "./base/defaults";
 @import "./components-new/header";
 @import "./components-new/menu-nav";
+@import "./components-new/hero";
+@import "./components-new/headlines";
+@import "./components-new/advantages";
+@import "./components-new/work";
 // @import "./components-old/header";
 // @import "./components-old/hero";
 // @import "./components-old/headlines";
