--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./components-new/headlines";
 @import "./components-new/advantages";
 @import "./components-new/work";
+@import "./components-new/comand";
 // @import "./components-old/header";
 // @import "./components-old/hero";
 // @import "./components-old/headlines";
