--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,8 @@ ul {
 }
 
 .container {
+  min-width: 250px;
+  max-width: 1200px;
   display: block;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -61,21 +63,6 @@ ul {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-}
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
 }
 
 /* Шапка */
@@ -376,6 +363,7 @@ ul {
 }
 
 .hero__overlay {
+  min-width: 250px;
   height: 400px;
   padding: 118px 0;
   margin: 0 auto;
@@ -427,12 +415,17 @@ ul {
 
 .section-title {
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
   font-size: 36px;
   font-weight: 700;
   line-height: normal;
   letter-spacing: 1.08px;
+}
+@media screen and (min-width: 1200px) {
+  .section-title {
+    margin-bottom: 50px;
+  }
 }
 
 .advantages {
@@ -593,17 +586,33 @@ ul {
 }
 
 .team__item {
-  width: 450px;
-  height: 622px;
+  width: 100%;
+  height: 100%;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
+.team__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .team__item {
+    width: 450px;
+    height: 622px;
+  }
+}
 @media screen and (min-width: 768px) {
   .team__item {
+    margin: 0 30px 30px 0;
     width: 354px;
     height: 536px;
+  }
+  .team__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .team__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -612,15 +621,30 @@ ul {
     height: 428px;
     margin-bottom: 0;
   }
+  .team__item:nth-child(4n) {
+    margin-right: 0;
+  }
+  .team__item:nth-last-child(-n+4) {
+    margin-bottom: 0;
+  }
+  .team__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .card__scene {
-  width: 450px;
-  height: 460px;
+  min-width: 220px;
+  min-height: 211px;
   background-color: #ffffff;
   outline: 1px solid #f5f4fa;
   -webkit-perspective: 800px;
           perspective: 800px;
+}
+@media screen and (min-width: 480px) {
+  .card__scene {
+    width: 450px;
+    height: 460px;
+  }
 }
 @media screen and (min-width: 768px) {
   .card__scene {
@@ -667,7 +691,6 @@ ul {
 
 .card__photo {
   width: 100%;
-  height: 100%;
 }
 
 .card__back {
@@ -730,7 +753,7 @@ ul {
           align-items: center;
   width: 44px;
   height: 44px;
-  margin-bottom: 30px;
+  margin-bottom: 24px;
   border-radius: 50%;
   background-size: 20px;
   background-repeat: no-repeat;
@@ -747,6 +770,11 @@ ul {
 .team__link:hover, .team__link:focus {
   background-color: #2196f3;
   color: #ffffff;
+}
+@media screen and (min-width: 1200px) {
+  .team__link {
+    margin-bottom: 30px;
+  }
 }
 
 .team__icon-network {
