--- a/sass/components-new/_comand.scss
+++ b/sass/components-new/_comand.scss
@@ -20,8 +20,10 @@
 }
 
 .team__item {
-  width: 450px;
-  height: 622px;
+  width: 100%;
+  height: 100%;
+  // width: 450px;
+  // height: 622px;
 
   background-color: $primary-background;
   border-radius: 0px 0px 4px 4px;
@@ -29,32 +31,68 @@
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
-  // @media screen and (min-width: $mobile-width) {
-  //   width: 450px;
-  //   height: 622px;
-  // }
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: $mobile-width) {
+    width: 450px;
+    height: 622px;
+  }
 
   @media screen and (min-width: $tablet-width) {
+    margin: 0 30px 30px 0;
     width: 354px;
     height: 536px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
   }
 
   @media screen and (min-width: $desktop-width) {
     width: 270px;
     height: 428px;
     margin-bottom: 0;
+
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+
+    &:nth-last-child(-n + 4) {
+      margin-bottom: 0;
+    }
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
 // Карточка
+
 .card__scene {
-  width: 450px;
-  height: 460px;
+  // width: 100%;
+  // height: 100%;
+
+  // width: 450px;
+  // height: 460px;
+  min-width: 220px;
+  min-height: 211px;
 
   background-color: $primary-background;
   outline: 1px solid $secondary-background;
 
   perspective: 800px;
+
+  @media screen and (min-width: $mobile-width) {
+    width: 450px;
+    height: 460px;
+  }
 
   @media screen and (min-width: $tablet-width) {
     width: 354px;
@@ -92,7 +130,7 @@
 
 .card__photo {
   width: 100%;
-  height: 100%;
+  // height: 100%;
 }
 
 .card__back {
@@ -147,7 +185,7 @@
   align-items: center;
   width: 44px;
   height: 44px;
-  margin-bottom: 30px;
+  margin-bottom: 24px;
   border-radius: 50%;
   background-size: 20px;
   background-repeat: no-repeat;
@@ -165,6 +203,10 @@
   &:focus {
     background-color: $accent-color;
     color: $primary-background;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-bottom: 30px;
   }
 }
 
