--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,7 @@ ul {
 }
 
 .container {
-  min-width: 250px;
-  max-width: 1200px;
+  min-width: 300px;
   display: block;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -63,6 +62,21 @@ ul {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 /* Шапка */
@@ -363,7 +377,7 @@ ul {
 }
 
 .hero__overlay {
-  min-width: 250px;
+  min-width: 300px;
   height: 400px;
   padding: 118px 0;
   margin: 0 auto;
@@ -587,7 +601,6 @@ ul {
 
 .team__item {
   width: 100%;
-  height: 100%;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
@@ -633,8 +646,9 @@ ul {
 }
 
 .card__scene {
-  min-width: 220px;
-  min-height: 211px;
+  width: 270px;
+  height: 260px;
+  margin: 0 auto;
   background-color: #ffffff;
   outline: 1px solid #f5f4fa;
   -webkit-perspective: 800px;
@@ -683,14 +697,15 @@ ul {
 
 .card__face {
   position: absolute;
-  width: 100%;
-  height: 100%;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .card__photo {
   width: 100%;
+  height: 100%;
 }
 
 .card__back {
