--- a/sass/components-new/_comand.scss
+++ b/sass/components-new/_comand.scss
@@ -21,7 +21,7 @@
 
 .team__item {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   // width: 450px;
   // height: 622px;
 
@@ -74,15 +74,15 @@
 }
 
 // Карточка
-
 .card__scene {
   // width: 100%;
   // height: 100%;
 
   // width: 450px;
   // height: 460px;
-  min-width: 220px;
-  min-height: 211px;
+  width: 270px;
+  height: 260px;
+  margin: 0 auto;
 
   background-color: $primary-background;
   outline: 1px solid $secondary-background;
@@ -123,14 +123,14 @@
 
 .card__face {
   position: absolute;
+  backface-visibility: hidden;
   width: 100%;
   height: 100%;
-  backface-visibility: hidden;
 }
 
 .card__photo {
   width: 100%;
-  // height: 100%;
+  height: 100%;
 }
 
 .card__back {
