доделал секцию постоянные клиенты

--- a/sass/base/_defaults.scss
+++ b/sass/base/_defaults.scss
@@ -42,7 +42,6 @@ ul {
 .container {
   // width: 1230px;
   min-width: 300px;
-  // max-width: 1200px;
   display: block;
   align-items: center;
   justify-content: center;
@@ -51,9 +50,9 @@ ul {
   margin-left: auto;
   margin-right: auto;
 
-  @media screen and (min-width: $mobile-width) {
-    width: 480px;
-  }
+  // @media screen and (min-width: $mobile-width) {
+  //   width: 480px;
+  // }
 
   @media screen and (min-width: $tablet-width) {
     width: 768px;
