--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "./components-new/advantages";
 @import "./components-new/work";
 @import "./components-new/comand";
+@import "./components-new/clients";
 // @import "./components-old/header";
 // @import "./components-old/hero";
 // @import "./components-old/headlines";
