--- a/css/main.css
+++ b/css/main.css
@@ -63,11 +63,6 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
@@ -457,22 +452,42 @@ ul {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .advantages__item {
   width: 450px;
 }
+.advantages__item:not(:last-child) {
+  margin-bottom: 30px;
+}
 @media screen and (min-width: 768px) {
   .advantages__item {
     width: 354px;
+    margin: 0 30px 30px 0;
+  }
+  .advantages__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .advantages__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .advantages__item {
     width: 270px;
+    margin-bottom: 0;
+  }
+  .advantages__item:nth-child(4n) {
+    margin-right: 0;
+  }
+  .advantages__item:nth-last-child(-n+4) {
+    margin-bottom: 0;
+  }
+  .advantages__item:not(:last-child) {
+    margin-right: 30px;
   }
 }
 
@@ -529,7 +544,6 @@ ul {
 @media screen and (min-width: 1200px) {
   .classes {
     display: block;
-    padding-top: 94px;
     padding-bottom: 94px;
   }
 }
@@ -550,6 +564,13 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0 30px 30px 0;
+}
+.classes__item:nth-child(3n) {
+  margin-right: 0;
+}
+.classes__item:nth-last-child(-n+3) {
+  margin-bottom: 0;
 }
 
 .classes__category {
@@ -593,9 +614,9 @@ ul {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
 }
 
@@ -795,5 +816,115 @@ ul {
 .team__icon-network {
   width: 20px;
   height: 20px;
+  fill: currentColor;
+}
+
+.clients {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.clients__card-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.clients__item {
+  margin: 0 30px 30px 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media screen and (min-width: 300px) {
+  .clients__item {
+    margin-right: 0;
+  }
+}
+@media (min-width: 480px) {
+  .clients__item {
+    margin-right: 30px;
+  }
+  .clients__item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 720px) {
+  .clients__item:nth-child(2n) {
+    margin-right: 30px;
+  }
+  .clients__item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .clients__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .clients__item:nth-child(6n) {
+    margin-right: 0;
+  }
+  .clients__item:nth-last-child(-n+6) {
+    margin-bottom: 0;
+  }
+}
+
+.clients__link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 210px;
+  height: 92px;
+  border: 1px solid rgb(175, 177, 184);
+  border-radius: 4px;
+  background-size: 106px 60px;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #afb1b8;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__link:hover, .clients__link:focus {
+  border-color: #2196f3;
+  color: #2196f3;
+}
+@media screen and (min-width: 768px) {
+  .clients__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
+}
+
+.clients__logo {
+  width: 106px;
+  height: 60px;
   fill: currentColor;
 }/*# sourceMappingURL=main.css.map */
