--- a/sass/components-new/_advantages.scss
+++ b/sass/components-new/_advantages.scss
@@ -9,18 +9,44 @@
 .advantages__card-set {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .advantages__item {
   width: 450px;
 
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
   @media screen and (min-width: $tablet-width) {
     width: 354px;
+    margin: 0 30px 30px 0;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
   }
 
   @media screen and (min-width: $desktop-width) {
     width: 270px;
+    margin-bottom: 0;
+
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+
+    &:nth-last-child(-n + 4) {
+      margin-bottom: 0;
+    }
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
