--- a/sass/components-new/_comand.scss
+++ b/sass/components-new/_comand.scss
@@ -15,7 +15,7 @@
 .team__card-set {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   text-align: center;
 }
 
