--- a/sass/components-new/_work.scss
+++ b/sass/components-new/_work.scss
@@ -3,7 +3,7 @@
 
   @media screen and (min-width: $desktop-width) {
     display: block;
-    padding-top: 94px;
+    // padding-top: 94px;
     padding-bottom: 94px;
   }
 }
@@ -17,6 +17,15 @@
 .classes__item {
   position: relative;
   display: flex;
+  margin: 0 30px 30px 0;
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
 
 .classes__category {
