--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./components-new/work";
 @import "./components-new/comand";
 @import "./components-new/clients";
+@import "./components-new/footer";
 // @import "./components-old/header";
 // @import "./components-old/hero";
 // @import "./components-old/headlines";
