откорректировал footer, недооформил  backdrop

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "./components-new/comand";
 @import "./components-new/clients";
 @import "./components-new/footer";
+@import "./components-new/backdrop";
 // @import "./components-old/header";
 // @import "./components-old/hero";
 // @import "./components-old/headlines";
