--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@
   margin: -1px;
 }
 
+.modal {
+  top: 50%;
+  left: 50%;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -830,6 +835,7 @@ ul {
 }
 
 .clients {
+  min-width: 300px;
   padding-top: 60px;
   padding-bottom: 60px;
   text-align: center;
@@ -841,30 +847,27 @@ ul {
   }
 }
 
-.clients__card-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@media (min-width: 480px) {
+  .clients__card-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .clients__item {
-  margin: 0 30px 30px 0;
+  margin-bottom: 30px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-@media screen and (min-width: 300px) {
-  .clients__item {
-    margin-right: 0;
-  }
 }
 @media (min-width: 480px) {
   .clients__item {
@@ -940,6 +943,7 @@ ul {
 }
 
 .footer {
+  min-width: 300px;
   max-width: 1600px;
   height: 603px;
   padding: 60px 0px 60px 0px;
@@ -957,56 +961,46 @@ ul {
   }
 }
 
-.footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0;
-  padding: 0;
-}
 @media screen and (min-width: 768px) {
   .footer__container {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-left: 76px;
+    padding-right: 89px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer__container {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    padding: 0;
   }
 }
 
-@media screen and (max-width: 1199px) {
+.address-block {
+  width: 100%;
+  text-align: center;
+}
+@media screen and (min-width: 480px) {
   .address-block {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    width: 232px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .address-block {
+    width: 232px;
+    margin: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .address-block {
+    width: 231px;
+    text-align: left;
   }
 }
 
@@ -1016,21 +1010,6 @@ ul {
 
 .address {
   margin-top: 20px;
-}
-
-@media screen and (max-width: 1199px) {
-  .address__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
 }
 
 .address__item:not(:last-child) {
@@ -1059,19 +1038,24 @@ ul {
 }
 
 .networks-block {
-  display: block;
-  margin-top: 60px;
+  width: 100%;
+  margin: 60px 0;
+}
+@media screen and (min-width: 480px) {
+  .networks-block {
+    width: 206px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 @media screen and (min-width: 768px) {
   .networks-block {
-    margin-top: 5px;
-    margin-left: 165px;
+    margin: 5px 0 102px;
   }
 }
 @media screen and (min-width: 1200px) {
   .networks-block {
-    margin-top: 12px;
-    margin-left: 70px;
+    margin: 12px 0 0 70px;
   }
 }
 
@@ -1091,6 +1075,20 @@ ul {
   .networks-block__title {
     text-align: left;
   }
+}
+
+.networks-block__list {
+  display: block;
+  text-align: center;
+}
+
+.networks-block__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .networks-block__link {
@@ -1126,17 +1124,10 @@ ul {
 }
 
 .newsletter-block {
-  display: inline-block;
-  margin-top: 60px;
-}
-@media screen and (max-width: 1199px) {
-  .newsletter-block {
-    margin-top: 60px;
-  }
+  margin: 0 auto;
 }
 @media screen and (min-width: 1200px) {
   .newsletter-block {
-    display: inline-block;
     margin: 12px 0 0 auto;
   }
 }
@@ -1160,28 +1151,18 @@ ul {
 }
 
 .newsletter-block__thumb {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  text-align: center;
 }
 @media screen and (min-width: 1200px) {
   .newsletter-block__thumb {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
 .newsletter-block__field {
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding: 15px 16px;
   margin-bottom: 20px;
@@ -1194,6 +1175,11 @@ ul {
   outline: none;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .newsletter-block__field {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .newsletter-block__field {
@@ -1256,8 +1242,9 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 0px 10px 31px;
   width: 200px;
+  padding: 10px 0px 10px 31px;
+  margin: auto;
   border-radius: 4px;
   border: none;
   background-color: #2196f3;
@@ -1288,4 +1275,308 @@ ul {
   .newsletter-block__icon {
     margin-left: 10px;
   }
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop--is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 270px;
+  height: 609px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop--is-hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(1.5);
+          transform: translate(-50%, -50%) scale(1.5);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
+
+.modal__button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 30px;
+  height: 30px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__button:hover, .modal__button:focus {
+  fill: #2196f3;
+}
+
+.service-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 528px;
+  height: 581px;
+  padding: 40px;
+}
+@media screen and (max-width: 1199px) {
+  .service-form {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+.service-form__title {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.service-form__field-title {
+  position: relative;
+  margin-bottom: 10px;
+  color: #757575;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+}
+
+.service-form__field {
+  width: 100%;
+  height: 40px;
+  padding: 12px 12px 12px 42px;
+  margin: 4px 0 0 0;
+  border: 1px solid rgba(21, 21, 21, 0.2);
+  border-radius: 4px;
+  font-size: 16px;
+  outline: none;
+  cursor: pointer;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.service-form__field-title .service-form__field:hover, .service-form__field-title .service-form__field:focus {
+  border-color: #2196f3;
+}
+
+.service-form__input-icon {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  top: 50%;
+  left: 12px;
+  cursor: pointer;
+  fill: currentColor;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.service-form__field:hover + .service-form__input-icon, .service-form__field:focus + .service-form__input-icon {
+  color: #2196f3;
+}
+.service-form__field-title:hover + .service-form__input-icon, .service-form__field-title:focus + .service-form__input-icon {
+  color: #2196f3;
+}
+
+.service-form__field-comment {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  margin-top: 4px;
+  margin-bottom: 10px;
+  border: 1px solid rgba(21, 21, 21, 0.2);
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  outline: none;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.service-form__field-comment:hover, .service-form__field-comment:focus {
+  border-color: #2196f3;
+}
+.service-form__field-comment::-webkit-input-placeholder {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(75, 75, 75, 0.5);
+}
+.service-form__field-comment::-moz-placeholder {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(75, 75, 75, 0.5);
+}
+.service-form__field-comment:-ms-input-placeholder {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(75, 75, 75, 0.5);
+}
+.service-form__field-comment::-ms-input-placeholder {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(75, 75, 75, 0.5);
+}
+.service-form__field-comment::placeholder {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(75, 75, 75, 0.5);
+}
+@media screen and (min-width: 1200px) {
+  .service-form__field-comment::-webkit-input-placeholder {
+    font-size: 12px;
+  }
+  .service-form__field-comment::-moz-placeholder {
+    font-size: 12px;
+  }
+  .service-form__field-comment:-ms-input-placeholder {
+    font-size: 12px;
+  }
+  .service-form__field-comment::-ms-input-placeholder {
+    font-size: 12px;
+  }
+  .service-form__field-comment::placeholder {
+    font-size: 12px;
+  }
+}
+
+.service-form__field-checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+@media screen and (min-width: 1200px) {
+  .service-form__field-checkbox {
+    font-size: 12px;
+  }
+}
+
+.service-form__agreement {
+  /* -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  position: absolute; */
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.service-form__chackbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+}
+.service-form__agreement:checked + .service-form__chackbox-icon {
+  border-color: #2196f3;
+  background-color: #2196f3;
+  background-image: url(../images/sprite/svg/icon\ check.svg);
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.service-form__agreement-link {
+  margin-left: 4px;
+  color: #2196f3;
+}
+
+.service-form__send-btn {
+  min-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 52px;
+  background-color: #2196f3;
+  color: #fff;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
