--- a/sass/components-new/_clients.scss
+++ b/sass/components-new/_clients.scss
@@ -1,4 +1,5 @@
 .clients {
+  min-width: 300px;
   padding-top: 60px;
   padding-bottom: 60px;
 
@@ -11,22 +12,21 @@
 }
 
 .clients__card-set {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  @media (min-width: $mobile-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .clients__item {
-  margin: 0 30px 30px 0;
+  margin-bottom: 30px;
   align-items: center;
   justify-content: center;
 
-  @media screen and (min-width: 300px) {
-    margin-right: 0;
-  }
-
   @media (min-width: $mobile-width) {
     margin-right: 30px;
+
     &:nth-child(2n) {
       margin-right: 0;
     }
