--- a/sass/components-new/_footer.scss
+++ b/sass/components-new/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  min-width: 300px;
   max-width: 1600px;
   height: 603px;
   padding: 60px 0px 60px 0px;
@@ -16,29 +17,37 @@
 }
 
 .footer__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-
   @media screen and (min-width: $tablet-width) {
-    flex-direction: row;
+    display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
+    justify-content: space-between;
+    padding-left: 76px;
+    padding-right: 89px;
   }
 
   @media screen and (min-width: $desktop-width) {
-    justify-content: flex-start;
+    padding: 0;
   }
 }
 
 .address-block {
-  @media screen and (max-width: 1199px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  text-align: center;
+
+  @media screen and (min-width: $mobile-width) {
+    width: 232px;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    width: 232px;
+    margin: 0;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    width: 231px;
+
+    text-align: left;
   }
 }
 
@@ -48,14 +57,6 @@
 
 .address {
   margin-top: 20px;
-}
-
-.address__list {
-  @media screen and (max-width: 1199px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
 }
 
 .address__item:not(:last-child) {
@@ -85,17 +86,21 @@
 }
 
 .networks-block {
-  display: block;
-  margin-top: 60px;
+  width: 100%;
+  margin: 60px 0;
+
+  @media screen and (min-width: $mobile-width) {
+    width: 206px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   @media screen and (min-width: $tablet-width) {
-    margin-top: 5px;
-    margin-left: 165px;
+    margin: 5px 0 102px;
   }
 
   @media screen and (min-width: $desktop-width) {
-    margin-top: 12px;
-    margin-left: 70px;
+    margin: 12px 0 0 70px;
   }
 }
 
@@ -117,6 +122,16 @@
   @media screen and (min-width: $desktop-width) {
     text-align: left;
   }
+}
+
+.networks-block__list {
+  display: block;
+  text-align: center;
+}
+
+.networks-block__item {
+  display: flex;
+  justify-content: center;
 }
 
 .networks-block__link {
@@ -149,15 +164,9 @@
 }
 
 .newsletter-block {
-  display: inline-block;
-  margin-top: 60px;
-
-  @media screen and (max-width: 1199px) {
-    margin-top: 60px;
-  }
+  margin: 0 auto;
 
   @media screen and (min-width: $desktop-width) {
-    display: inline-block;
     margin: 12px 0 0 auto;
   }
 }
@@ -182,17 +191,15 @@
 }
 
 .newsletter-block__thumb {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
 
   @media screen and (min-width: $desktop-width) {
-    flex-direction: row;
+    display: flex;
   }
 }
 
 .newsletter-block__field {
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding: 15px 16px;
   margin-bottom: 20px;
@@ -206,6 +213,10 @@
   outline: none;
 
   @include transit(border-color);
+
+  @media screen and (min-width: $mobile-width) {
+    width: 450px;
+  }
 
   @media screen and (min-width: $desktop-width) {
     width: 358px;
@@ -233,8 +244,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 0px 10px 31px;
   width: 200px;
+  padding: 10px 0px 10px 31px;
+  margin: auto;
 
   border-radius: 4px;
   border: none;
