--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,8 @@
 @import "./components-new/headlines";
 @import "./components-new/advantages";
 @import "./components-new/work";
+@import "./components-new/reused/card";
+@import "./components-new/reused/networks";
 @import "./components-new/comand";
 @import "./components-new/clients";
 @import "./components-new/footer";
