--- a/css/main.css
+++ b/css/main.css
@@ -609,78 +609,6 @@ ul {
   color: #ffffff;
 }
 
-.team {
-  margin: 0 auto;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #f5f4fa;
-}
-@media screen and (min-width: 1200px) {
-  .team {
-    max-width: 1600px;
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
-}
-
-.team__card-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-}
-
-.team__item {
-  width: 100%;
-  background-color: #ffffff;
-  border-radius: 0px 0px 4px 4px;
-  -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-}
-.team__item:not(:last-child) {
-  margin-bottom: 30px;
-}
-@media screen and (min-width: 480px) {
-  .team__item {
-    width: 450px;
-    height: 622px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .team__item {
-    margin: 0 30px 30px 0;
-    width: 354px;
-    height: 536px;
-  }
-  .team__item:nth-child(2n) {
-    margin-right: 0;
-  }
-  .team__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .team__item {
-    width: 270px;
-    height: 428px;
-    margin-bottom: 0;
-  }
-  .team__item:nth-child(4n) {
-    margin-right: 0;
-  }
-  .team__item:nth-last-child(-n+4) {
-    margin-bottom: 0;
-  }
-  .team__item:not(:last-child) {
-    margin-right: 30px;
-  }
-}
-
 .card__scene {
   width: 270px;
   height: 260px;
@@ -792,7 +720,20 @@ ul {
   letter-spacing: 0.48px;
 }
 
-.team__link {
+.networks-block__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.networks-block__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.networks-block__link {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -804,34 +745,102 @@ ul {
           align-items: center;
   width: 44px;
   height: 44px;
-  margin-bottom: 24px;
   border-radius: 50%;
   background-size: 20px;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: rgba(255, 255, 255, 0.1);
   color: #afb1b8;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team__link:not(:last-child) {
-  margin-right: 10px;
-}
-.team__link:hover, .team__link:focus {
+.networks-block__link:hover, .networks-block__link:focus {
   background-color: #2196f3;
   color: #ffffff;
 }
-@media screen and (min-width: 1200px) {
-  .team__link {
-    margin-bottom: 30px;
-  }
+
+.recolor__link {
+  color: #ffffff;
 }
 
-.team__icon-network {
+.networks-block__icon {
   width: 20px;
   height: 20px;
   fill: currentColor;
+}
+
+.team {
+  margin: 0 auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #f5f4fa;
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    max-width: 1600px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.team__card-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.team__item {
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+.team__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .team__item {
+    width: 450px;
+    height: 622px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    margin: 0 30px 30px 0;
+    width: 354px;
+    height: 536px;
+  }
+  .team__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .team__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: 270px;
+    height: 428px;
+    margin-bottom: 0;
+  }
+  .team__item:nth-child(4n) {
+    margin-right: 0;
+  }
+  .team__item:nth-last-child(-n+4) {
+    margin-bottom: 0;
+  }
+  .team__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .clients {
@@ -1004,7 +1013,7 @@ ul {
   }
 }
 
-.footer__logo {
+.recolor__logo {
   color: #ffffff;
 }
 
@@ -1075,52 +1084,6 @@ ul {
   .networks-block__title {
     text-align: left;
   }
-}
-
-.networks-block__list {
-  display: block;
-  text-align: center;
-}
-
-.networks-block__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.networks-block__link {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: rgba(255, 255, 255, 0.1);
-  -webkit-transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.networks-block__link:not(:last-child) {
-  margin-right: 10px;
-}
-.networks-block__link:hover, .networks-block__link:focus {
-  background-color: #2196f3;
-}
-
-.networks-block__icon {
-  width: 20px;
-  height: 20px;
 }
 
 .newsletter-block {
@@ -1294,8 +1257,8 @@ ul {
 
 .modal {
   position: absolute;
-  width: 270px;
-  height: 609px;
+  min-width: 270px;
+  max-height: 669px;
   background-color: #ffffff;
   border-radius: 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1361,15 +1324,9 @@ ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 528px;
-  height: 581px;
+  width: 100%;
+  height: 100%;
   padding: 40px;
-}
-@media screen and (max-width: 1199px) {
-  .service-form {
-    width: 450px;
-    height: 609px;
-  }
 }
 
 .service-form__title {
@@ -1502,24 +1459,28 @@ ul {
 }
 
 .service-form__field-checkbox {
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+@media screen and (min-width: 1200px) {
+  .service-form__field-checkbox {
+    font-size: 14px;
+  }
+}
+
+.service-form__checkbox-view {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 30px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-@media screen and (min-width: 1200px) {
-  .service-form__field-checkbox {
-    font-size: 12px;
-  }
+  padding-left: 20px;
 }
 
 .service-form__agreement {
@@ -1539,12 +1500,16 @@ ul {
 }
 
 .service-form__chackbox-icon {
-  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   width: 16px;
   height: 15px;
-  margin-right: 8px;
   border: 2px solid #212121;
   border-radius: 2px;
+  cursor: pointer;
 }
 .service-form__agreement:checked + .service-form__chackbox-icon {
   border-color: #2196f3;
@@ -1553,10 +1518,14 @@ ul {
   background-size: contain;
   background-origin: border-box;
 }
+.service-form__checkbox-view:hover .service-form__chackbox-icon, .service-form__checkbox-view:focus .service-form__chackbox-icon {
+  border-color: #2196f3;
+}
 
 .service-form__agreement-link {
-  margin-left: 4px;
+  margin-left: 3px;
   color: #2196f3;
+  text-decoration: underline;
 }
 
 .service-form__send-btn {
