--- a/sass/components-new/_footer.scss
+++ b/sass/components-new/_footer.scss
@@ -51,7 +51,7 @@
   }
 }
 
-.footer__logo {
+.recolor__logo {
   color: $primary-background;
 }
 
@@ -122,45 +122,6 @@
   @media screen and (min-width: $desktop-width) {
     text-align: left;
   }
-}
-
-.networks-block__list {
-  display: block;
-  text-align: center;
-}
-
-.networks-block__item {
-  display: flex;
-  justify-content: center;
-}
-
-.networks-block__link {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: $background-icon;
-
-  @include transit(background);
-
-  &:not(:last-child) {
-    margin-right: 10px;
-  }
-
-  &:hover,
-  &:focus {
-    background-color: $accent-color;
-  }
-}
-
-.networks-block__icon {
-  width: 20px;
-  height: 20px;
 }
 
 .newsletter-block {
