доделал portfolio-nav

--- a/sass/base/_defaults.scss
+++ b/sass/base/_defaults.scss
@@ -50,6 +50,8 @@ ul {
   margin-left: auto;
   margin-right: auto;
 
+  background-color: green;
+
   // @media screen and (min-width: $mobile-width) {
   //   width: 480px;
   // }
