--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,6 +31,8 @@
 // portfolio
 @import "./components-new/portfolio/section-portfolio";
 @import "./components-new/portfolio/portfolio-nav";
+@import "./components-new/portfolio/portfolio-items";
+@import "./components-new/portfolio/portfolio-card";
 // @import "./components-old/header";
 // @import "./components-old/hero";
 // @import "./components-old/headlines";
