--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ ul {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  background-color: green;
 }
 @media screen and (min-width: 768px) {
   .container {
@@ -1574,11 +1575,15 @@ ul {
   margin-left: auto;
   margin-bottom: 40px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 663px) {
   .filter-buttons {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .filter-buttons {
     margin-bottom: 30px;
   }
 }
@@ -1593,7 +1598,7 @@ ul {
   margin-bottom: 15px;
 }
 
-@media screen and (min-width: 250px) and (max-width: 403px) {
+@media screen and (min-width: 50px) and (max-width: 392px) {
   .filter-buttons__item:nth-child(3n) {
     margin-left: 0;
   }
@@ -1601,8 +1606,16 @@ ul {
     margin-left: 0;
   }
 }
-@media (min-width: 403px) and (max-width: 767px) {
+@media (min-width: 385px) and (max-width: 503px) {
   .filter-buttons__item:nth-child(4n) {
+    margin-left: 0;
+  }
+  .filter-buttons__item:nth-child(5n) {
+    margin-left: 8px;
+  }
+}
+@media (min-width: 496px) and (max-width: 641px) {
+  .filter-buttons__item:nth-child(5n) {
     margin-left: 0;
   }
 }
@@ -1610,6 +1623,7 @@ ul {
   display: inline-block;
   min-width: 73px;
   padding: 6px 22px;
+  border: none;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
@@ -1632,4 +1646,141 @@ ul {
   background-color: #2196f3;
   -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+}
+
+.portfolio-list {
+  display: inline-block;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-list {
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+}
+
+.portfolio-list__item {
+  border: solid 1px tomato;
+  border-radius: 0px, 0px, 4px, 4px;
+  overflow: hidden;
+  /* Альтернатива */
+  /* .portfolio-list__item :not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+
+  .portfolio-list__item :not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  } */
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-list__item {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 60px) / 3);
+    -ms-flex-preferred-size: calc(33.3333333333% - 30px);
+        flex-basis: calc(33.3333333333% - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+    border-radius: 0px, 0px, 4px, 4px;
+    overflow: hidden;
+  }
+  .portfolio-list__item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .portfolio-list__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+}
+.portfolio-list__item:hover, .portfolio-list__item:focus {
+  -webkit-box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+}
+
+.product {
+  width: 100%;
+}
+
+.product__thumb {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-top: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  overflow: hidden;
+}
+
+.product__image {
+  display: block;
+  width: 100%;
+}
+
+.product__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  background-color: rgba(33, 150, 243, 0.9);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.product:hover .product__overlay, .product:focus .product__overlay {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.product__description {
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-100%); */
+  padding: 63px 24px;
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+}
+
+.product__meta {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+
+.product__title {
+  margin-top: 0;
+  margin-bottom: 4px;
+  color: #212121;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 2;
+  letter-spacing: 1.08px;
+}
+
+.product__comment {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.9;
+  letter-spacing: 0.48px;
 }/*# sourceMappingURL=main.css.map */
