--- a/sass/components-new/portfolio/_portfolio-nav.scss
+++ b/sass/components-new/portfolio/_portfolio-nav.scss
@@ -6,8 +6,11 @@
   margin-left: auto;
   margin-bottom: 40px;
 
-  @media screen and (min-width: $tablet-width) {
+  @media screen and (min-width: 663px) {
     justify-content: center;
+  }
+
+  @media screen and (min-width: $tablet-width) {
     margin-bottom: 30px;
   }
 
@@ -16,16 +19,12 @@
   }
 }
 
-// .filter-buttons__item:not(:first-child) {
-//   margin-left: 8px;
-// }
-
 .filter-buttons__item + .filter-buttons__item {
   margin-left: 8px;
   margin-bottom: 15px;
 }
 
-@media screen and (min-width: 250px) and (max-width: 403px) {
+@media screen and (min-width: 50px) and (max-width: 392px) {
   .filter-buttons__item:nth-child(3n) {
     margin-left: 0;
   }
@@ -34,8 +33,17 @@
   }
 }
 
-@media (min-width: 403px) and (max-width: 767px) {
+@media (min-width: 385px) and (max-width: 503px) {
   .filter-buttons__item:nth-child(4n) {
+    margin-left: 0;
+  }
+  .filter-buttons__item:nth-child(5n) {
+    margin-left: 8px;
+  }
+}
+
+@media (min-width: 496px) and (max-width: 641px) {
+  .filter-buttons__item:nth-child(5n) {
     margin-left: 0;
   }
 }
@@ -44,7 +52,7 @@
   display: inline-block;
   min-width: 73px;
   padding: 6px 22px;
-  //   border: none;
+  border: none;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
