--- a/sass/components-new/reused/_card.scss
+++ b/sass/components-new/reused/_card.scss
@@ -2,6 +2,7 @@
 .card__scene {
   width: 270px;
   height: 260px;
+
   margin: 0 auto;
 
   background-color: $primary-background;
@@ -29,8 +30,9 @@
 
 .card__img {
   position: relative;
-  // width: 100%;
+
   height: 100%;
+  align-items: center;
   transform: rotateY(0);
   transition: transform 500ms $transition-type;
   transform-style: preserve-3d;
