--- a/css/main.css
+++ b/css/main.css
@@ -85,40 +85,23 @@ ul {
   }
 }
 
+.card {
+  width: 100%;
+}
+
 .card__scene {
-  width: 270px;
-  height: 260px;
-  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   background-color: #ffffff;
   outline: 1px solid #f5f4fa;
   -webkit-perspective: 800px;
           perspective: 800px;
 }
-@media screen and (min-width: 480px) {
-  .card__scene {
-    width: 450px;
-    height: 460px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .card__scene {
-    width: 354px;
-    height: 374px;
-    -webkit-perspective: 700px;
-            perspective: 700px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .card__scene {
-    width: 270px;
-    height: 260px;
-    -webkit-perspective: 600px;
-            perspective: 600px;
-  }
-}
 
 .card__img {
   position: relative;
+  width: 100%;
   height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -1216,47 +1199,38 @@ ul {
 }
 
 .advantages__card-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .advantages__card-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
 }
 
 .advantages__item {
-  width: 450px;
-}
-.advantages__item:not(:last-child) {
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 @media screen and (min-width: 768px) {
   .advantages__item {
-    width: 354px;
-    margin: 0 30px 30px 0;
-  }
-  .advantages__item:nth-child(2n) {
-    margin-right: 0;
-  }
-  .advantages__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 30px) / 2);
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+    margin-left: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .advantages__item {
-    width: 270px;
-    margin-bottom: 0;
-  }
-  .advantages__item:nth-child(4n) {
-    margin-right: 0;
-  }
-  .advantages__item:nth-last-child(-n+4) {
-    margin-bottom: 0;
-  }
-  .advantages__item:not(:last-child) {
-    margin-right: 30px;
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 90px) / 4);
+    -ms-flex-preferred-size: calc(25% - 30px);
+        flex-basis: calc(25% - 30px);
   }
 }
 
@@ -1415,12 +1389,6 @@ ul {
     -ms-flex-preferred-size: calc(25% - 30px);
         flex-basis: calc(25% - 30px);
   }
-  .team__item:nth-child(4n) {
-    margin-right: 0;
-  }
-  .team__item:nth-last-child(-n+4) {
-    margin-bottom: 0;
-  }
 }
 
 .clients {
@@ -1436,6 +1404,9 @@ ul {
   }
 }
 
+.clients__card-set {
+  display: block;
+}
 @media (min-width: 480px) {
   .clients__card-set {
     display: -webkit-box;
@@ -1443,49 +1414,37 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    margin-top: -30px;
+    margin-left: -30px;
   }
 }
 
 .clients__item {
-  margin-bottom: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin-top: 30px;
 }
 @media (min-width: 480px) {
   .clients__item {
-    margin-right: 30px;
-  }
-  .clients__item:nth-child(2n) {
-    margin-right: 0;
-  }
-}
-@media screen and (min-width: 720px) {
-  .clients__item:nth-child(2n) {
-    margin-right: 30px;
-  }
-  .clients__item:nth-child(3n) {
-    margin-right: 0;
-  }
-  .clients__item:nth-last-child(-n+3) {
-    margin-bottom: 0;
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 30px) / 2);
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+    margin-left: 30px;
   }
 }
-@media (min-width: 1200px) {
-  .clients__item:not(:last-child) {
-    margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .clients__item {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 60px) / 3);
+    -ms-flex-preferred-size: calc(33.3333333333% - 30px);
+        flex-basis: calc(33.3333333333% - 30px);
   }
-  .clients__item:nth-child(6n) {
-    margin-right: 0;
-  }
-  .clients__item:nth-last-child(-n+6) {
-    margin-bottom: 0;
+}
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 150px) / 6);
+    -ms-flex-preferred-size: calc(16.6666666667% - 30px);
+        flex-basis: calc(16.6666666667% - 30px);
   }
 }
 
@@ -1650,12 +1609,6 @@ ul {
     width: calc((100% - 60px) / 3);
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
         flex-basis: calc(33.3333333333% - 30px);
-  }
-  .portfolio-list__item:nth-child(3n) {
-    margin-right: 0;
-  }
-  .portfolio-list__item:nth-last-child(-n+3) {
-    margin-bottom: 0;
   }
 }
 .portfolio-list__item:hover, .portfolio-list__item:focus {
