--- a/sass/components-new/studio/_clients.scss
+++ b/sass/components-new/studio/_clients.scss
@@ -12,52 +12,36 @@
 }
 
 .clients__card-set {
+  display: block;
+
   @media (min-width: $mobile-width) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    margin-top: calc(-1 * $card-set-gap);
+    margin-left: calc(-1 * $card-set-gap);
   }
 }
 
 .clients__item {
-  margin-bottom: 30px;
-  align-items: center;
-  justify-content: center;
+  margin-top: $card-set-gap;
 
   @media (min-width: $mobile-width) {
-    margin-right: 30px;
-
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 30px) / 2);
+    flex-basis: calc(100% / 2 - $card-set-gap);
+    margin-left: $card-set-gap;
   }
 
-  @media screen and (min-width: 720px) {
-    &:nth-child(2n) {
-      margin-right: 30px;
-    }
-
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
-
-    &:nth-last-child(-n + 3) {
-      margin-bottom: 0;
-    }
+  @media screen and (min-width: $tablet-width) {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 60px) / 3);
+    flex-basis: calc(100% / 3 - $card-set-gap);
   }
 
-  @media (min-width: $desktop-width) {
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
-
-    &:nth-child(6n) {
-      margin-right: 0;
-    }
-
-    &:nth-last-child(-n + 6) {
-      margin-bottom: 0;
-    }
+  @media screen and (min-width: $desktop-width) {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 150px) / 6);
+    flex-basis: calc(100% / 6 - $card-set-gap);
   }
 }
 
