--- a/css/main.css
+++ b/css/main.css
@@ -90,22 +90,28 @@ ul {
 }
 
 .card__scene {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   background-color: #ffffff;
   outline: 1px solid #f5f4fa;
   -webkit-perspective: 800px;
           perspective: 800px;
+}
+@media screen and (min-width: 768px) {
+  .card__scene {
+    -webkit-perspective: 700px;
+            perspective: 700px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card__scene {
+    -webkit-perspective: 600px;
+            perspective: 600px;
+  }
 }
 
 .card__img {
   position: relative;
   width: 100%;
   height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-transform: rotateY(0);
           transform: rotateY(0);
   -webkit-transition: -webkit-transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -121,16 +127,14 @@ ul {
 }
 
 .card__face {
-  position: absolute;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
   width: 100%;
   height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
 .card__photo {
-  width: 100%;
-  height: 100%;
+  min-height: 285px;
 }
 
 .card__back {
@@ -144,6 +148,8 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
@@ -718,6 +724,7 @@ ul {
       -ms-flex-align: center;
           align-items: center;
 }
+
 .site-nav {
   display: none;
 }
@@ -1144,8 +1151,8 @@ ul {
   padding: 118px 0;
   margin: 0 auto;
   background-color: #2f303a;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../../img/Hero/Hero-MOB-x1.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../../img/Hero/Hero-MOB-x1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1157,6 +1164,41 @@ ul {
   }
 }
 
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero__overlay {
+    background-color: #2f303a;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../../img/Hero/Hero-MOB-x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../../img/Hero/Hero-MOB-x2.jpg");
+  }
+}
+@media screen and (min-width: 481px) {
+  .hero__overlay {
+    background-color: #2f303a;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../../img/Hero/Hero-TAB-x1.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../../img/Hero/Hero-TAB-x1.jpg");
+  }
+}
+@media screen and (min-width: 481px) and (min-device-pixel-ratio: 2), screen and (min-width: 481px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 481px) and (min-resolution: 192dpi), screen and (min-width: 481px) and (min-resolution: 2dppx) {
+  .hero__overlay {
+    background-color: #2f303a;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../../img/Hero/Hero-TAB-x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../../img/Hero/Hero-TAB-x2.jpg");
+  }
+}
+@media screen and (min-width: 769px) {
+  .hero__overlay {
+    background-color: #2f303a;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../../img/Hero/Hero-DESK-x1.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../../img/Hero/Hero-DESK-x1.jpg");
+  }
+}
+@media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
+  .hero__overlay {
+    background-color: #2f303a;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../../img/Hero/Hero-DESK-x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../../img/Hero/Hero-DESK-x2.jpg");
+  }
+}
 .hero__text {
   margin-top: 0;
   margin-bottom: 30px;
@@ -1292,14 +1334,18 @@ ul {
 }
 
 .classes__card-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .classes__card-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
 }
 
 .classes__item {
@@ -1307,13 +1353,28 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 30px 30px 0;
+  margin-top: 30px;
 }
-.classes__item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .classes__item {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 30px) / 2);
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+    margin-left: 30px;
+  }
 }
-.classes__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .classes__item {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 60px) / 3);
+    -ms-flex-preferred-size: calc(33.3333333333% - 30px);
+        flex-basis: calc(33.3333333333% - 30px);
+  }
+}
+
+.classes__image {
+  min-height: 215px;
 }
 
 .classes__category {
@@ -1367,6 +1428,7 @@ ul {
 }
 
 .team__item {
+  padding-bottom: 24px;
   margin-top: 30px;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
@@ -1388,6 +1450,7 @@ ul {
     width: calc((100% - 90px) / 4);
     -ms-flex-preferred-size: calc(25% - 30px);
         flex-basis: calc(25% - 30px);
+    padding-bottom: 30px;
   }
 }
 
@@ -1632,14 +1695,22 @@ ul {
 }
 
 .product__image {
-  display: block;
-  width: 100%;
+  min-height: 223px;
 }
 
 .product__overlay {
   position: absolute;
   top: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -1657,7 +1728,7 @@ ul {
 }
 
 .product__description {
-  padding: 63px 24px;
+  padding: 77px 24px;
   color: rgb(255, 255, 255);
   font-family: Roboto;
   font-style: normal;
@@ -1666,6 +1737,16 @@ ul {
   line-height: 1.56;
   letter-spacing: 0.03em;
 }
+@media screen and (min-width: 481px) {
+  .product__description {
+    padding: 49px 24px 77px;
+  }
+}
+@media screen and (min-width: 769px) {
+  .product__description {
+    padding: 63px 24px;
+  }
+}
 
 .product__meta {
   max-width: 100%;
@@ -1673,6 +1754,16 @@ ul {
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
+}
+@media screen and (min-width: 481px) {
+  .product__meta {
+    padding: 20px 0 56px 24px;
+  }
+}
+@media screen and (min-width: 769px) {
+  .product__meta {
+    padding: 20px 0 20px 24px;
+  }
 }
 
 .product__title {
