--- a/sass/components-new/reused/_card.scss
+++ b/sass/components-new/reused/_card.scss
@@ -4,32 +4,18 @@
 }
 
 .card__scene {
-  display: flex;
-  // width: 100%;
-  // height: 260px;
-  // margin: 0 auto;
-
   background-color: $primary-background;
   outline: 1px solid $secondary-background;
 
   perspective: 800px;
 
-  // @media screen and (min-width: $mobile-width) {
-  //   width: 450px;
-  //   height: 460px;
-  // }
+  @media screen and (min-width: $tablet-width) {
+    perspective: 700px;
+  }
 
-  // @media screen and (min-width: $tablet-width) {
-  //   width: 354px;
-  //   height: 374px;
-  //   perspective: 700px;
-  // }
-
-  // @media screen and (min-width: $desktop-width) {
-  //   width: 270px;
-  //   height: 260px;
-  //   perspective: 600px;
-  // }
+  @media screen and (min-width: $desktop-width) {
+    perspective: 600px;
+  }
 }
 
 .card__img {
@@ -37,7 +23,6 @@
   width: 100%;
   height: 100%;
 
-  align-items: center;
   transform: rotateY(0);
   transition: transform 500ms $transition-type;
   transform-style: preserve-3d;
@@ -49,20 +34,14 @@
 }
 
 .card__face {
-  position: absolute;
-  backface-visibility: hidden;
-  // overflow: hidden;
-
-  // display: flex;
-  // justify-content: center;
-
   width: 100%;
   height: 100%;
+
+  backface-visibility: hidden;
 }
 
 .card__photo {
-  width: 100%;
-  height: 100%;
+  min-height: 285px;
 }
 
 .card__back {
@@ -71,6 +50,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 
