--- a/sass/components-new/studio/_hero.scss
+++ b/sass/components-new/studio/_hero.scss
@@ -14,7 +14,7 @@
       $additional-background,
       $additional-background
     ),
-    url("../images/hero/hero.jpg");
+    url("../../../img/Hero/Hero-MOB-x1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -22,6 +22,72 @@
   @media screen and (min-width: $desktop-width) {
     height: 600px;
     padding: 200px 0;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero__overlay {
+    background-color: $dark-bg-color;
+    background-image: linear-gradient(
+        to right,
+        $additional-background,
+        $additional-background
+      ),
+      url("../../../img/Hero/Hero-MOB-x2.jpg");
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .hero__overlay {
+    background-color: $dark-bg-color;
+    background-image: linear-gradient(
+        to right,
+        $additional-background,
+        $additional-background
+      ),
+      url("../../../img/Hero/Hero-TAB-x1.jpg");
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero__overlay {
+      background-color: $dark-bg-color;
+      background-image: linear-gradient(
+          to right,
+          $additional-background,
+          $additional-background
+        ),
+        url("../../../img/Hero/Hero-TAB-x2.jpg");
+    }
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .hero__overlay {
+    background-color: $dark-bg-color;
+    background-image: linear-gradient(
+        to right,
+        $additional-background,
+        $additional-background
+      ),
+      url("../../../img/Hero/Hero-DESK-x1.jpg");
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero__overlay {
+      background-color: $dark-bg-color;
+      background-image: linear-gradient(
+          to right,
+          $additional-background,
+          $additional-background
+        ),
+        url("../../../img/Hero/Hero-DESK-x2.jpg");
+    }
   }
 }
 
