--- a/sass/components-new/studio/_work.scss
+++ b/sass/components-new/studio/_work.scss
@@ -3,29 +3,43 @@
 
   @media screen and (min-width: $desktop-width) {
     display: block;
-    // padding-top: 94px;
     padding-bottom: 94px;
   }
 }
 
 .classes__card-set {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: block;
+
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * $card-set-gap);
+    margin-left: calc(-1 * $card-set-gap);
+  }
 }
 
 .classes__item {
   position: relative;
   display: flex;
-  margin: 0 30px 30px 0;
+  margin-top: $card-set-gap;
 
-  &:nth-child(3n) {
-    margin-right: 0;
+  @media screen and (min-width: $tablet-width) {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 30px) / 2);
+    flex-basis: calc(100% / 2 - $card-set-gap);
+    margin-left: $card-set-gap;
   }
 
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  @media screen and (min-width: $desktop-width) {
+    /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во элементов в строке) */
+    width: calc((100% - 60px) / 3);
+    flex-basis: calc(100% / 3 - $card-set-gap);
+    // margin-left: $card-set-gap;
   }
+}
+
+.classes__image {
+  min-height: 215px;
 }
 
 .classes__category {
